[package]
name = "navm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.nar_dev_utils]
# 【2024-03-13 21:17:55】实用库现在独立为`nar_dev_utils`
# * 【2024-03-13 22:36:05】目前只启用它的宏
# version = "0.1.0" # ! 本地依赖可以不添加版本
path = "../NAR-dev-util"
features = []

[dependencies.enum_narsese]
# ! 本地依赖可以不添加版本
# 载入Narsese API，引入其中的「词法Narsese」部分
# TODO: 后续大概需要改名
path = "../EnumNarsese.rs"
features = ["lexical_narsese"]
