[package]
name = "navm"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.anyhow]
version = "1.0.81"

[dependencies.nar_dev_utils]
# 【2024-03-13 21:17:55】实用库现在独立为`nar_dev_utils`
# * 【2024-03-13 22:36:05】目前只启用它的宏
# version = "0.1.0" # ! 本地依赖可以不添加版本
path = "../NAR-dev-util"
# git = "https://github.com/ARCJ137442/NAR-dev-util"
# ! 【2024-03-23 19:19:01】似乎Rust-Analyzer无法获取私有仓库数据
features = []

[dependencies.narsese]
# ! 本地依赖可以不添加版本
# 载入Narsese API，引入其中的「词法Narsese」部分
path = "../Narsese.rs"
# git = "https://github.com/ARCJ137442/Narsese.rs"
# ! 【2024-03-23 19:19:01】似乎Rust-Analyzer无法获取私有仓库数据
features = ["lexical_narsese"]
